--- a/app/src/main/res/layout/activity_first_floor_route.xml
+++ b/app/src/main/res/layout/activity_first_floor_route.xml
@@ -1,39 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FirstFloorRouteActivity">
-
-    <ImageView
-        android:id="@+id/topFloor"
-        android:layout_width="392dp"
-        android:layout_height="587dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/firstfloor3" />
+    android:layout_height="wrap_content"
+    tools:context=".FirstFloorRouteActivity"
+    android:background="@drawable/firstfloor3"
+    android:id="@+id/topFloor">
 
     <ImageView
         android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
         android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/topFloor"
-        app:layout_constraintEnd_toStartOf="@+id/topFloor"
-        app:layout_constraintStart_toStartOf="@+id/topFloor"
-        app:layout_constraintTop_toTopOf="@+id/topFloor"
+        android:visibility="visible"
         app:srcCompat="@drawable/redpintwo" />
 
     <ImageView
         android:id="@+id/redPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-        app:layout_constraintStart_toStartOf="@+id/topFloor"
-        app:layout_constraintTop_toTopOf="@+id/topFloor"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="193dp"
+        android:layout_marginStart="88dp"
+        android:visibility="visible"
         app:srcCompat="@drawable/greenpintwo" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
