--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -10,7 +10,7 @@
         android:id="@+id/scanButton"
         style="@android:style/Widget.Button"
         android:layout_width="270dp"
-        android:layout_height="118dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -18,20 +18,20 @@
         android:background="@drawable/rounded_button"
         android:backgroundTint="#002561"
         android:fontFamily="@font/ericsson_font"
-        android:text="Scan QR"
+        android:text="Treasure Hunt Game"
         android:textColor="#ffffff"
-        android:textSize="50sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.932" />
+        app:layout_constraintVertical_bias="0.864" />
 
     <Button
         android:id="@+id/mapButton"
         style="@android:style/Widget.Button"
         android:layout_width="270dp"
-        android:layout_height="118dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -51,7 +51,7 @@
     <Button
         android:id="@+id/desksButton"
         android:layout_width="270dp"
-        android:layout_height="118dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
