--- a/app/src/main/res/layout/activity_treasure.xml
+++ b/app/src/main/res/layout/activity_treasure.xml
@@ -41,5 +41,23 @@
         android:textAlignment="center"
         />
 
+    <Button
+        android:id="@+id/ContinueScan"
+        android:layout_width="139dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_button"
+        android:text="Continue Scanning"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.508" />
+
 
 </android.support.constraint.ConstraintLayout>
